<resources>
    <!-- Strings related to login -->
    <string name="app_name">Żółw+</string>
    <string name="prompt_email">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Żółw+</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="back">Wróć</string>
    <string name="alert_title_text">Alerty</string>
    <string name="no_alerts">Brak alertów</string>
    <string name="send_data_error_msg">Coś poszło nie tak. Kod błędu: </string>
    <string name="invalid_username">Podaj nazwę użytkownika</string>
    <string name="invalid_password">Podaj hasło</string>
    <string name="invalid_password_short">Hasło musi posiadać minimum 5 znaków</string>
...

    <string name="title">Smartarium</string>

    <string name="lack_of_data">Brak danych</string>
    <string name="data_to_send">Dane do wysłania</string>
    <string name="clean">Wyczyść</string>
    <string name="send">Wyślij</string>

    <!-- maintenance possible values -->
    <string name="text_maintenance">Utrzymanie</string>
    <string-array name="maintenance_main_strings">
        <item>Światło</item>
        <!--<item>Przerwa techniczna</item>-->
...

    <!-- Food possible values -->
    <string name="food_text">Pokarm</string>

    <string-array name="food_main_strings">
        <item>Suchy</item>
        <item>Mrożony</item>
        <item>Inny</item>
        <item>Wróć</item>
    </string-array>

    <string-array name="food_dry_strings">
        <item>Suszone krewetki</item>
        <item>Suszone stynki</item>
        <item>Gotowy pokarm suchy</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="food_frozen_strings">
        <item>Mrożone krewetki</item>
        <item>Mrożone stynki</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="food_other_strings">
        <item>Żywe rybki</item>
...
